# em_wave_propagator

./: README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
src/em_wave/: __init__.py  animation.py  cli.py  fields.py
src/em_wave_propagator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_fields.py
