[project]
name = "em-wave-propagator"
version = "0.1.0"
description = "Matplotlib animation of electromagnetic wave propagation with perpendicular fields."
authors = [{ name = "Your Name" }]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
